--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -44,14 +44,23 @@ form{
     box-shadow: 1px 1px 8px 1px;
 }
 .img-container{
-    padding: 20px;
-    gap: 20px;
+    padding: 30px;
+    gap: 10px;
 }
 .avatar{
     width: 300px;
     height: 300px;
     border-radius: 50%;
     object-fit: cover;
+    border: 2px solid var(--color-blue);
+}
+.name-btn{
+    width: 100%;
+    padding: 10px;
+    background-color: #0565fe;
+    color: var(--color-white);
+    text-align: center;
+    border-radius: 0.375rem;
 }
 .profile-details{
     width: 450px;
@@ -60,7 +69,22 @@ form{
 .profile-details > div{
     padding: 10px;
 }
-.follow-container{
-    display: flex;
-    gap: 50px;
+.profile-btn{
+    margin-top: 16px;
+    width: 100%;
+    padding: 10px;
+    background-color: #0565fe;
+    color: var(--color-white);
+    text-align: center;
+    border-radius: 0.375rem;
+}
+.website-link{
+    padding: 8px 15px;
+    background-color: #0565fe;
+    color: var(--color-white);
+    text-align: center;
+    border-radius: 0.375rem;
+}
+label{
+    font-weight: 500;
 }
