--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -1,3 +1,4 @@
+/* CSS for default styles */
 .main-container{
     display: flex;
     flex-direction: column;
@@ -88,3 +89,33 @@ form{
 label{
     font-weight: 500;
 }
+
+@media only screen and (max-width: 600px) {
+    /* CSS for devices with a maximum width of 600px (e.g., smartphones, tablet, etc.) */
+    .main-container {
+      padding: 10px;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+    }
+    .custom-input, .search-btn {
+      width: 100%;
+    }
+    .profile{
+        width: auto;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        border-bottom: 4px solid #c5c5c5;
+    }
+    .avatar {
+      width: 200px;
+      height: 200px;
+    }
+    .profile-details {
+      padding: 30px;
+    }
+  }
+  
+  
